RESOLVED FIXED49029
Should add a test that shows windowed plugins can paint
https://bugs.webkit.org/show_bug.cgi?id=49029
Summary Should add a test that shows windowed plugins can paint
Adam Roben (:aroben)
Reported 2010-11-04 15:00:24 PDT
Should add a test that shows windowed plugins can paint
Attachments
Patch (19.00 KB, patch)
2010-11-04 15:02 PDT, Adam Roben (:aroben)
no flags
This time with correct expected results (22.52 KB, patch)
2010-11-04 15:49 PDT, Adam Roben (:aroben)
jhoneycutt: review+
Adam Roben (:aroben)
Comment 1 2010-11-04 15:02:10 PDT
Adam Roben (:aroben)
Comment 2 2010-11-04 15:49:35 PDT
Created attachment 72993 [details] This time with correct expected results
Adam Roben (:aroben)
Comment 3 2010-11-05 07:50:55 PDT
Note You need to log in before you can comment on or make changes to this bug.