Add a test that shows that windowed plugins are able to paint

Somehow we never had a test for this before.

Fixes <http://webkit.org/b/49029> Should add a test that shows
windowed plugins can paint

Reviewed by Jon Honeycutt.

WebKitTools:

* DumpRenderTree/TestNetscapePlugIn/Tests/win/DrawsGradient.cpp: Added.
(DrawsGradient::DrawsGradient):
(DrawsGradient::wndProc): We handle the WM_PAINT and WM_PRINTCLIENT messages.

(DrawsGradient::onPaint):
(DrawsGradient::onPrintClient):
These both just call through to paint.

(DrawsGradient::paint): Fills our client area with some gradients.

* DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj: Link
against Msimg32.lib for ::GradientFill and added DrawsGradient.

* DumpRenderTree/win/PixelDumpSupportWin.cpp:
(createBitmapContextFromWebView): Use WM_PRINT instead of
WM_PRINTCLIENT so that ::DefWindowProc will send
WM_PRINT/WM_PRINTCLIENT messages to the WebView's child windows.
Replaced kCGImageAlphaPremultipledFirst with kCGImageAlphaNoneSkipFirst
because GDI doesn't support alpha and kCGImageBitmapOrder32Little with
kCGImageBitmapOrder32Host because, who knows, maybe someday Windows
will run on a big-endian platform.

LayoutTests:

* platform/win/platform/win/plugins/draws-gradient-expected.checksum: Added.
* platform/win/platform/win/plugins/draws-gradient-expected.png: Added.
* platform/win/platform/win/plugins/draws-gradient-expected.txt: Added.
* platform/win/plugins/draws-gradient.html: Added.

Canonical link: https://commits.webkit.org/61905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71418 268f45cc-cd09-0410-ab3c-d52691b4dbfc